--- a/src/PokemonList/PokemonCard/PokemonCard.css
+++ b/src/PokemonList/PokemonCard/PokemonCard.css
@@ -1,3 +1,6 @@
 #card {
-  background-color: beige;
+  background-color: whitesmoke;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 150px;
 }
